--- a/public/style.css
+++ b/public/style.css
@@ -16,15 +16,15 @@ div {
 
 .fretboard{
   stroke:black;
-  fill:rgb(111,80,0);
+  fill:#d6ad01;
 }
 .fret{
   stroke:black;
-  fill:rgb(192,192,192);
+  fill:#747474;
 }
 .dot{
   stroke:none;
-  fill:rgb(255,255,240);
+  fill:rgb(0,0,0);
 }
 .guitar-string{
   stroke:none;
