--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 html{
   color:grey;
+  background-color: #222;
 }
 
 .title{
@@ -10,6 +11,13 @@ div {
   box-sizing:border-box;
 }
 
+.exercise{
+  transform:translate(500px, 200px);
+}
+.newButton{
+  cursor:hand;
+}
+
 .fretboard-super{
   stroke-width:5;
 }
@@ -18,6 +26,9 @@ div {
   stroke:black;
   fill:#d6ad01;
 }
+.staticFretboard .fretboardDots, .staticFretboard .frets ,.noteDotCollection{
+  transform:translateX(200px);
+}
 .fret{
   stroke:black;
   fill:url(#fretGradient);
@@ -25,6 +36,10 @@ div {
   height:1000;
   y:100;
 }
+.fret:nth-child(2){
+  fill:#ccf;
+}
+
 .dot{
   stroke:none;
   fill:rgb(0,0,0);
@@ -47,9 +62,9 @@ div {
 .guitar-string{
   stroke:none;
   fill:url(#stringPattern);
-  x:50;
+  x:0;
   height:30;
-  width:10800;
+  width:11000;
 }
 .noteDot{
   transform: translate(-85px, 13px);
