--- a/public/style.css
+++ b/public/style.css
@@ -127,9 +127,9 @@ svg{
   margin:25px 0 25px 0;
   text-align:right;
 }
-.fretboard{
+.neck{
   y:      100px;
-  x:      50.0px;
+  x:      50px;
   height: 1000px;
   width:    7350px;
   stroke: #cec59f;
@@ -149,18 +149,24 @@ svg{
 .fret:nth-child(2){
   fill:#ccf;
 }
-.guitar-string{
+g .guitar-string{
   stroke: none;
   fill:   url(#stringPattern);
-  x:      40;
-  height: 40;
-  width:  7350;
+  x:      50;
+  width:  7360;
 }
+g .guitar-string:nth-child(1){ height:19; }
+g .guitar-string:nth-child(2){ height:20; }
+g .guitar-string:nth-child(3){ height:22; }
+g .guitar-string:nth-child(4){ height:24; }
+g .guitar-string:nth-child(5){ height:26; }
+g .guitar-string:nth-child(6){ height:28; }
 .guitar-string.inactive{
   opacity:0.5;
 }
 .noteDot{
   overflow:visible;
+  opacity:0.25;
 }
 
 .note-dot-label{
@@ -184,6 +190,13 @@ svg{
   text-anchor:  middle;
   transform:translate(100px, 50px);
   fill: white;
+}
+.noteDot.noteDotPlayer text{
+  font-size:110px;
+}
+.noteDot.noteDotPlayer circle{
+  font-size:120px;
+  stroke-width:5px;
 }
 .noteButton{
   cursor:   hand;
@@ -219,14 +232,40 @@ svg{
 .pause-mode, .play-mode{
   fill:grey;
 }
+.pattern-label{
+  transform: translateY(250px);
+  fill:white;
+}
 .playButtonBack{
   fill-opacity:0;
   transform: translate(100px,100px);
 }
+.player-notedot{
+  opacity:0;
+}
+.player-notedot text{
+    font-size:120px;
+    text-align: center; 
+    text-anchor:  middle;
+    transform:translate(100px, 50px);
+    fill: white;
+}
+.player-notedot circle{
+  
+  stroke:white;
+  stroke-width:5px;
+  transform:translate(100px, 0px);
+}
+.player-notedot circle.playing{
+  fill:rgb(228, 129, 0);
+}
+.player-notedot circle.paused{
+  fill:rgb(100, 37, 0);
+  stroke:rgb(100, 37, 0);
+}
 .restart{
   transform:          translate(1600px, 3700px);
   text-anchor:        middle;
-  alignment-baseline: middle;
   font-size: 140px;
 
 }
